test/sema/typeck/trait/generic-assoc-type-default-missing-bound.out
error: type `T` does not implement trait `Foo`.
--> generic-assoc-type-default-missing-bound.dora:10:20
 | 
 | trait Bar {
 |     type Item[T] = Wrapper[T];
                      ~~~~~~~~~~
 | }
 | 
1 error found.
