test/sema/typeck/trait/generic-assoc-type-default-missing-bound.dora
trait Foo {
    fn value(): Int64;
}

class Wrapper[T: Foo] {
    value: T,
}

trait Bar {
    type Item[T] = Wrapper[T];
}
